<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_arrow_back" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kidney_check_fragment_title"
        style="@style/Application.Design.RobotoHeadline28Bold.TextAppearance.LineHeight28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/application___dimen__x4"
        android:layout_marginTop="27dp"
        android:text="@string/kidney_check_title"
        android:textColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingTop="11dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/application___dimen__x15"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/kidney_check_fragment_hemo_title"
                style="@style/Application.Design.RobotoBody15Regular.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x4"
                android:layout_marginTop="@dimen/application___dimen__x6"
                android:text="@string/kidney_check_hemo_title"
                android:textColor="@color/application___design3__text__black__shark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kidney_check_fragment_hemo_container"
                style="@style/Application.Design3.BaseInputFilled.TextInput.ClearMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x4"
                android:layout_marginTop="@dimen/application___dimen__x1"
                android:backgroundTint="@color/application___design3__mystic_gray"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kidney_check_fragment_hemo_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kidney_check_hemo_hint"
                    android:padding="@dimen/application___dimen__x3"
                    android:textCursorDrawable="@drawable/blue_cursor_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/Application.Design.RobotoBody15Regular.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x5"
                android:layout_marginTop="@dimen/application___dimen__x5"
                android:text="@string/kidney_check_bp_title"
                android:textColor="@color/application___design3__text__black__shark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kidney_check_fragment_bp_container"
                style="@style/Application.Design3.BaseInputFilled.TextInput.ClearMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x4"
                android:layout_marginTop="@dimen/application___dimen__x1"
                android:backgroundTint="@color/application___design3__mystic_gray"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kidney_check_fragment_bp_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kidney_check_bp_hint"
                    android:padding="@dimen/application___dimen__x3"
                    android:textCursorDrawable="@drawable/blue_cursor_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/Application.Design.RobotoBody15Regular.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x5"
                android:layout_marginTop="@dimen/application___dimen__x5"
                android:text="@string/kidney_check_al_title"
                android:textColor="@color/application___design3__text__black__shark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kidney_check_fragment_al_container"
                style="@style/Application.Design3.BaseInputFilled.TextInput.ClearMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x4"
                android:layout_marginTop="@dimen/application___dimen__x1"
                android:backgroundTint="@color/application___design3__mystic_gray"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kidney_check_fragment_al_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kidney_check_al_hint"
                    android:padding="@dimen/application___dimen__x3"
                    android:textCursorDrawable="@drawable/blue_cursor_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/Application.Design.RobotoBody15Regular.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x5"
                android:layout_marginTop="@dimen/application___dimen__x5"
                android:text="@string/kidney_check_bgr_title"
                android:textColor="@color/application___design3__text__black__shark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kidney_check_fragment_bgr_container"
                style="@style/Application.Design3.BaseInputFilled.TextInput.ClearMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x4"
                android:layout_marginTop="@dimen/application___dimen__x1"
                android:backgroundTint="@color/application___design3__mystic_gray"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kidney_check_fragment_bgr_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kidney_check_bgr_hint"
                    android:padding="@dimen/application___dimen__x3"
                    android:textCursorDrawable="@drawable/blue_cursor_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/Application.Design.RobotoBody15Regular.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x5"
                android:layout_marginTop="@dimen/application___dimen__x5"
                android:text="@string/kidney_check_sg_title"
                android:textColor="@color/application___design3__text__black__shark" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kidney_check_fragment_sg_container"
                style="@style/Application.Design3.BaseInputFilled.TextInput.ClearMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x4"
                android:layout_marginTop="@dimen/application___dimen__x1"
                android:backgroundTint="@color/application___design3__mystic_gray"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kidney_check_fragment_sg_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kidney_check_sg_hint"
                    android:padding="@dimen/application___dimen__x3"
                    android:textCursorDrawable="@drawable/blue_cursor_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/Application.Design.RobotoBody15Regular.TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x5"
                android:layout_marginTop="@dimen/application___dimen__x5"
                android:text="@string/kidney_check_pe_title"
                android:textColor="@color/application___design3__text__black__shark" />

            <RadioGroup
                android:id="@+id/kidney_check_fragment_pe_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/application___dimen__x5"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/kidney_check_fragment_pe_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/application___dimen__x4"
                    android:buttonTint="@color/black"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/kidney_check_fragment_pe_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/application___dimen__x2"
                    android:buttonTint="@color/black"
                    android:text="@string/no"
                    android:textColor="@color/black" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/kidney_check_fragment_check_result"
                style="@style/Application.Design3.ButtonSmall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/application___dimen__x13"
                android:layout_marginHorizontal="@dimen/application___dimen__x4"
                android:layout_marginTop="@dimen/application___dimen__x7"
                android:enabled="false"
                android:text="@string/check" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/kidney_check_fragment_result"
                style="@style/Application.Design.Body17SemiBold.SFTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/application___dimen__x5"
                android:layout_marginTop="@dimen/application___dimen__x5"
                android:textColor="@color/application___design3__text__black__shark"
                android:visibility="gone"
                android:text="Болен"
                tools:visibility="visible" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>